added  authorization for routers
