# catalog-service/internal/handlers/router.go
@@ -6,6 +6,7 @@ import (
 	_ "savannah-store/catalog-service/docs"
 	"savannah-store/catalog-service/internal/logger"
 	"savannah-store/catalog-service/internal/repository"
+	auth "savannah-store/catalog-service/internal/middleware"
 
 	"github.com/go-redis/redis"
 	"github.com/gorilla/sessions"
@@ -76,15 +77,15 @@ func (a *App) setRouters() {
 
 	
 	// Category routes
-	a.E.POST("/catalog/categories", a.CreateCategory)          
+	a.E.POST("/catalog/categories",a.CreateCategory,auth.RoleMiddleware(a.DB, "admin"))          
 	a.E.GET("/catalog/categories", a.ViewCategories)           
-	a.E.PUT("/catalog/categories/:id", a.UpdateCategory) 
-	a.E.GET("/categories/:id/average-price",a.GetAveragePrice)  
+	a.E.PUT("/catalog/categories/:id", a.UpdateCategory,auth.RoleMiddleware(a.DB, "admin")) 
+	a.E.GET("/categories/:id/average-price",a.GetAveragePrice,auth.RoleMiddleware(a.DB, "admin"))  
 
 	// Product routes
-	a.E.POST("/catalog/products", a.CreateProduct)             
+	a.E.POST("/catalog/products", a.CreateProduct,auth.RoleMiddleware(a.DB, "admin"))             
 	a.E.GET("/catalog/products", a.ViewProducts)               
-	a.E.PUT("/catalog/products/:id", a.UpdateProduct)          
+	a.E.PUT("/catalog/products/:id", a.UpdateProduct,auth.RoleMiddleware(a.DB, "admin"))          
 
 
 
